# defmon-driver

./: BUGS.md  CHANGELOG.md  FUTURE.md  README.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
defmon_driver/: __init__.py  _smoke_support.py  binmon.py  bootstrap_keycodes.py  calibrate_sidtab.py  coverage.py  defmon.py  field_setter.py  keycode_table.py  keyhandler.py  keys.py  screen.py  sidtab.py  smoke.py  smoke_checkpoint_cpuhistory.py  smoke_coverage.py  smoke_note_chord.py  smoke_sidcall.py  smoke_sidtab.py  tune_manifest.py  tune_navigation.py  vice_docker.py
tests/: test_lint.py
tests/unit/: _fakebinmon.py  test_binmon_framing.py  test_coverage.py  test_defmon_screen_and_disk.py  test_defmon_wrappers.py  test_field_setter.py  test_field_setter_direct.py  test_inject.py  test_keycode_table.py  test_keyhandler.py  test_keys.py  test_screen.py  test_sidtab.py  test_tap_retry.py  test_tune_manifest.py  test_tune_navigation.py  test_vice_docker.py
